# FineSightBench

./: .gitignore  README.md  demo.ipynb  generate.py  main.py  pyproject.toml  run_eval.py  run_hpc_eval.sh  run_hpc_eval_simple.sh
docs/: attention_visualization_research.md
finesightbench/: __init__.py  visualize.py
finesightbench/core/: __init__.py  canvas.py  colors.py  objects.py
finesightbench/evaluation/: __init__.py  framework.py  json_metrics.py
finesightbench/perception/: __init__.py  generator.py
finesightbench/reasoning/: __init__.py  generator.py
finesightbench/textwild/: __init__.py  backgrounds.py  generator.py  text_renderer.py
finesightbench/visualization/: __init__.py  direct.py  overlay.py  rollout.py
notebooks/: dataset_intro.ipynb  dataset_validation_for_all.ipynb  download_models.ipynb  eval_all_requested_vlms.ipynb  eval_all_requested_vlms_mass.ipynb  eval_all_requested_vlms_mass_GLM-4.6V-Flash.ipynb  eval_all_requested_vlms_mass_InternVL3_5-1B-Flash.ipynb  eval_all_requested_vlms_mass_Llama-4-Scout-17B-16E-Instruct.ipynb  eval_all_requested_vlms_mass_gemma-4-E2B-it.ipynb  eval_deepseek_vl2_tiny.ipynb  eval_deepseek_vl2_tiny_eval.ipynb  eval_glm_4_6v_flash.ipynb  eval_llama_4_scout_17b_16e_instruct.ipynb  eval_models_general.notebook  eval_qwen3_vl_2b_instruct.ipynb  generate_perception_dataset.ipynb  generate_reasoning_dataset.ipynb  qwen3vl_attention_rollout.ipynb  upload_to_huggingface.ipynb  upload_to_huggingface_large.ipynb  vlm_eval_metrics_analysis.ipynb  vlm_eval_viewer.ipynb
notebooks/obsolete/: eval_gemma_4_e2b_it.ipynb  eval_internvl3_5_1b_flash.ipynb  eval_models_general.ipynb  eval_qwen3_vl_2b_instruct.ipynb  generate_reasoning_dataset.ipynb
obsolete/: attention_visualization_tutorial.ipynb
scripts/: eval_all_requested_vlms_mass.py  eval_all_requested_vlms_mass_GLM-4.6V-FP8.py  eval_all_requested_vlms_mass_InternVL3_5-1B-Flash.py  eval_all_requested_vlms_mass_InternVL3_5-4B-Flash.py  eval_all_requested_vlms_mass_InternVL3_5-8B-Flash.py  eval_all_requested_vlms_mass_Qwen3-VL-4B-Instruct.py  eval_all_requested_vlms_mass_deepseek-vl2.py  eval_all_requested_vlms_mass_deepseek-vl2_small.py  eval_all_requested_vlms_mass_gemini-2.5-flash-preview.py  eval_all_requested_vlms_mass_gemma-4-E2B-it.py  eval_all_requested_vlms_mass_gemma-4-E4B-it.py  eval_all_requested_vlms_mass_gpt-4o.py  fix_chain_dot_identity.py  generate_large_dataset.py  merge_textwild_into_full.py
tests/: dataset_validation.ipynb  dataset_validation_for_all.ipynb  test_visualization.py
