[project]
name = "finesightbench"
version = "0.1.0"
description = "Fine-grained visual perception & reasoning benchmark for VLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "cairosvg>=2.7",
    "torch>=2.1",
    "transformers>=4.50",
    "accelerate>=0.30",
    "huggingface_hub>=0.24",
]

[tool.setuptools.package-data]
"finesightbench.core" = ["assets/animals/*.svg"]
