[project]
name = "finesightbench"
version = "0.1.0"
description = "Fine-grained visual perception & reasoning benchmark for VLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow==12.2.0",
    "numpy==2.4.4",
    "matplotlib==3.10.8",
    "cairosvg==2.9.0",
    "torch==2.11.0",
    "transformers==5.5.4",
    "accelerate==1.13.0",
    "huggingface-hub==1.11.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "anyio==4.13.0",
    "asttokens==3.0.1",
    "attrdict3==2.0.2",
    "attrs==26.1.0",
    "cairocffi==1.7.1",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.3.2",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cssselect2==0.9.0",
    "cuda-bindings==13.2.0",
    "cuda-pathfinder==1.5.3",
    "cuda-toolkit==13.0.2",
    "cycler==0.12.1",
    "datasets==4.8.4",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dill==0.4.1",
    "einops==0.8.2",
    "executing==2.2.1",
    "filelock==3.29.0",
    "fonttools==4.62.1",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "h11==0.16.0",
    "hf-xet==1.4.3",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "imageio==2.37.3",
    "iniconfig==2.3.0",
    "ipykernel==7.2.0",
    "ipython==9.10.1",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.8",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver==1.5.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "nvidia-cublas==13.1.0.3",
    "nvidia-cuda-cupti==13.0.85",
    "nvidia-cuda-nvrtc==13.0.88",
    "nvidia-cuda-runtime==13.0.96",
    "nvidia-cudnn-cu13==9.19.0.56",
    "nvidia-cufft==12.0.0.61",
    "nvidia-cufile==1.15.1.6",
    "nvidia-curand==10.4.0.35",
    "nvidia-cusolver==12.0.4.66",
    "nvidia-cusparse==12.6.3.3",
    "nvidia-cusparselt-cu13==0.8.0",
    "nvidia-nccl-cu13==2.28.9",
    "nvidia-nvjitlink==13.0.88",
    "nvidia-nvshmem-cu13==3.4.5",
    "nvidia-nvtx==13.0.85",
    "packaging==26.1",
    "pandas==3.0.2",
    "parso==0.8.6",
    "pexpect==4.9.0",
    "pip==24.0",
    "platformdirs==4.9.6",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "psutil==7.2.2",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==21.0.0",
    "pycparser==3.0",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "pytest==9.0.3",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "regex==2026.4.4",
    "requests==2.33.1",
    "rich==15.0.0",
    "safetensors==0.7.0",
    "setuptools==65.5.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "timm==1.0.26",
    "tinycss2==1.5.1",
    "tokenizers==0.22.2",
    "torchvision==0.26.0",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "triton==3.6.0",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "wcwidth==0.6.0",
    "webencodings==0.5.1",
    "widgetsnbextension==4.0.15",
    "xxhash==3.6.0",
    "yarl==1.23.0",
]

[tool.setuptools.packages.find]
include = ["finesightbench*"]

[tool.setuptools.package-data]
"finesightbench.core" = ["assets/animals/*.svg"]
